--- a/thesis.bib
+++ b/thesis.bib
@@ -1,51 +1,157 @@
-@book{dahl1972structured,
-	editor = {Dahl, O. J. and Dijkstra, E. W. and Hoare, C. A. R.},
-	title = {Structured Programming},
-	year = {1972},
-	isbn = {0-12-200550-3},
-	source = {Library of Congress Catalog Card Number: 72-84452},
-	publisher = {Academic Press Ltd.},
-	address = {London, UK, UK},
+@misc{cloud-computing,
+	author = {Sai Vennam},
+	title = {Cloud Computing},
+	url = {https://www.ibm.com/au-en/cloud/learn/cloud-computing/},
+	urldate = {2022-05-13}
 }
 
-@book{cormen2009algorithms,
-	author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L. and Stein, Clifford},
-	title = {Introduction to Algorithms, Third Edition},
-	year = {2009},
-	isbn = {0262033844, 9780262033848},
-	edition = {3rd},
-	publisher = {The MIT Press},
+@misc{what-is-cloud-computing,
+	title = {What is Cloud Computing?},
+	url = {https://azure.microsoft.com/en-us/overview/what-is-cloud-computing/},
+	urldate = {2022-05-13}
 }
 
-@incollection{dijkstra1979goto,
-	author = {Dijkstra, E.},
-	chapter = {Go to Statement Considered Harmful},
-	title = {Classics in Software Engineering},
-	editor = {Yourdon, Edward Nash},
-	year = {1979},
-	isbn = {0-917072-14-6},
-	pages = {27--33},
-	numpages = {7},
-	url = {http://dl.acm.org/citation.cfm?id=1241515.1241518},
-	acmid = {1241518},
-	publisher = {Yourdon Press},
-	address = {Upper Saddle River, NJ, USA},
+@misc{what-is-the-cloud,
+	title = {What is the cloud?},
+	url = {https://www.cloudflare.com/en-gb/learning/cloud/what-is-the-cloud/},
+	urldate = {2022-05-13}
 }
 
-@article{krasner1988mvc,
-	author = {Krasner, Glenn E. and Pope, Stephen T.},
-	title = {A Cookbook for Using the Model-View-Controller User Interface Paradigm in Smalltalk-80},
-	journal = {J. Object Oriented Program.},
-	issue_date = {Aug./Sept. 1988},
-	volume = {1},
-	number = {3},
-	month = aug,
-	year = {1988},
-	issn = {0896-8438},
-	pages = {26--49},
-	numpages = {24},
-	url = {http://dl.acm.org/citation.cfm?id=50757.50759},
-	acmid = {50759},
-	publisher = {SIGS Publications},
-	address = {Denville, NJ, USA},
-} 
+@misc{java-k8s-client-lib,
+	title = {Java Kubernetes Client library},
+	url = {https://github.com/kubernetes-client/java/},
+	urldate = {2022-05-13}
+}
+
+@misc{postgresql,
+	title = {About PostgreSQL},
+	url = {https://www.postgresql.org/about/},
+	urldate = {2022-05-13}
+}
+
+@misc{what-is-the-postgresql,
+	title = {What is the PostgreSQL?},
+	url = {https://aws.amazon.com/rds/postgresql/what-is-postgresql/},
+	urldate = {2022-05-13}
+}
+
+@misc{docker-container,
+	title = {Use containers to Build, Share and Run your applications},
+	url = {https://www.docker.com/resources/what-container/},
+	urldate = {2022-05-13}
+}
+
+@misc{kubernetes,
+	title = {What is Kubernetes?},
+	url = {https://kubernetes.io/docs/concepts/overview/what-is-kubernetes/},
+	urldate = {2022-05-13}
+}
+
+@misc{java-spring-boot,
+	title = {Java Spring Boot},
+	url = {https://www.ibm.com/cloud/learn/java-spring-boot/},
+	urldate = {2022-05-13}
+}
+
+@misc{react-js-wiki,
+	title = {React (JavaScript library)},
+	url = {https://en.wikipedia.org/wiki/React_(JavaScript_library)/},
+	urldate = {2022-05-13}
+}
+
+@misc{react-bootstrap,
+	title = {React Bootstrap},
+	url = {https://react-bootstrap.github.io/},
+	urldate = {2022-05-13}
+}
+
+@misc{material-ui-react,
+	title = {What is Material UI in React?},
+	url = {https://www.educative.io/edpresso/what-is-material-ui-in-react/},
+	urldate = {2022-05-13}
+}
+
+@misc{html-intro,
+	title = {HTML Introduction},
+	url = {https://www.w3schools.com/html/html_intro.asp},
+	urldate = {2022-05-13}
+}
+
+@misc{css,
+	title = {CSS},
+	url = {https://en.wikipedia.org/wiki/CSS},
+	urldate = {2022-05-13}
+}
+
+@misc{rfc-1035,
+	title = {RFC 1035 Label Names},
+	url = {https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#rfc-1035-label-names},
+	urldate = {2022-05-13}
+}
+
+@misc{jdk,
+	title = {Java Development Kit},
+	url = {https://www.oracle.com/java/technologies/downloads/},
+	urldate = {2022-05-13}
+}
+
+@misc{intellij-idea,
+	title = {IntelliJ IDEA},
+	url = {https://www.jetbrains.com/idea/download/},
+	urldate = {2022-05-13}
+}
+
+@misc{docker-desktop,
+	title = {Docker Dekstop},
+	url = {https://docs.docker.com/desktop/windows/install/},
+	urldate = {2022-05-13}
+}
+
+@misc{minikube,
+	title = {Minikube},
+	url = {https://minikube.sigs.k8s.io/docs/start/},
+	urldate = {2022-05-13}
+}
+
+@misc{postgresql-download,
+	title = {PostgreSQL},
+	url = {https://www.postgresql.org/download/},
+	urldate = {2022-05-13}
+}
+
+@misc{node-js,
+	title = {Node Js},
+	url = {https://nodejs.org/en/download/},
+	urldate = {2022-05-13}
+}
+
+@misc{why-spring,
+	title = {Why Spring?},
+	url = {https://spring.io/why-spring},
+	urldate = {2022-05-13}
+}
+
+@misc{uuid-id,
+	title = {Universal Unique Identifier},
+	url = {https://www.techtarget.com/searchapparchitecture/definition/UUID-Universal-Unique-Identifier},
+	urldate = {2022-05-13}
+}
+
+@misc{mini-eo-cm,
+	title = {Mini EO-CM},
+	url = {https://github.com/rasulkhanbayov/Thesis/tree/master},
+	urldate = {2022-05-13}
+}
+
+@misc{postman,
+	title = {Postman},
+	url = {https://www.postman.com/downloads/},
+	urldate = {2022-05-13}
+}
+
+@book{nfv-for-dummies,
+    author = {Balamurali Thekkedath},
+    publisher = {John Wiley and Sons, Inc},
+	title = {Network Functions Virtualization for dummies},
+	year = {1972}
+}
